--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinesets.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinesets.cluster.x-k8s.io.yaml
@@ -67,7 +67,7 @@
               type: object
               x-kubernetes-map-type: atomic
             template:
-              description: Template is the object that describes the machine that will be created if insufficient replicas are detected. Object references to custom resources resources are treated as templates.
+              description: Template is the object that describes the machine that will be created if insufficient replicas are detected. Object references to custom resources are treated as templates.
               properties:
                 metadata:
                   description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata'
