--- a/helm/cluster-api/files/core/bases/clusterclasses.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/clusterclasses.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.9.1
+    controller-gen.kubebuilder.io/version: v0.10.0
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -61,4 +61,5 @@ spec:
       schema: {}
       served: true
       storage: true
-      subresources: {}
+      subresources:
+        status: {}
