--- a/helm/cluster-api/files/core/patches/versions/v1beta1/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/machines.cluster.x-k8s.io.yaml
@@ -87,6 +87,9 @@
             nodeDrainTimeout:
               description: 'NodeDrainTimeout is the total amount of time that the controller will spend on draining a node. The default value is 0, meaning that the node can be drained without any time limitations. NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`'
               type: string
+            nodeVolumeDetachTimeout:
+              description: NodeVolumeDetachTimeout is the total amount of time that the controller will spend on waiting for all volumes to be detached. The default value is 0, meaning that the volumes can be detached without any time limitations.
+              type: string
             providerID:
               description: ProviderID is the identification ID of the machine provided by the provider. This field must match the provider ID as seen on the node object corresponding to this machine. This field is required by higher level consumers of cluster-api. Example use case is cluster autoscaler with cluster-api as provider. Clean-up logic in the autoscaler compares machines to nodes to find out machines at provider which could not get registered as Kubernetes nodes. With cluster-api as a generic out-of-tree provider for autoscaler, this field is required by autoscaler to be able to have a provider view of the list of machines. Another list of nodes is queried from the k8s apiserver and then a comparison is done to find out unregistered machines and are marked for delete. This field will be set by the actuators and consumed by higher level entities like autoscaler that will be interfacing with cluster-api as generic provider.
               type: string
@@ -120,6 +123,10 @@
             bootstrapReady:
               description: BootstrapReady is the state of the bootstrap provider.
               type: boolean
+            certificatesExpiryDate:
+              description: CertificatesExpiryDate is the expiry date of the machine certificates. This value is only set for control plane machines.
+              format: date-time
+              type: string
             conditions:
               description: Conditions defines current service state of the Machine.
               items:
