--- a/helm/cluster-api/files/bootstrap/patches/versions/v1beta1/kubeadmconfigs.bootstrap.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/bootstrap/patches/versions/v1beta1/kubeadmconfigs.bootstrap.cluster.x-k8s.io.yaml
@@ -429,6 +429,13 @@
                       items:
                         type: string
                       type: array
+                    imagePullPolicy:
+                      description: ImagePullPolicy specifies the policy for image pulling during kubeadm "init" and "join" operations. The value of this field must be one of "Always", "IfNotPresent" or "Never". Defaults to "IfNotPresent". This can be used only with Kubernetes version equal to 1.22 and later.
+                      enum:
+                        - Always
+                        - IfNotPresent
+                        - Never
+                      type: string
                     kubeletExtraArgs:
                       additionalProperties:
                         type: string
@@ -551,6 +558,13 @@
                       items:
                         type: string
                       type: array
+                    imagePullPolicy:
+                      description: ImagePullPolicy specifies the policy for image pulling during kubeadm "init" and "join" operations. The value of this field must be one of "Always", "IfNotPresent" or "Never". Defaults to "IfNotPresent". This can be used only with Kubernetes version equal to 1.22 and later.
+                      enum:
+                        - Always
+                        - IfNotPresent
+                        - Never
+                      type: string
                     kubeletExtraArgs:
                       additionalProperties:
                         type: string
