--- a/helm/cluster-api/files/core/patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
@@ -76,6 +76,11 @@
                   description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                   type: object
               type: object
+            settings:
+              additionalProperties:
+                type: string
+              description: 'Settings defines key value pairs to be passed to all calls to all supported RuntimeExtensions. Note: Settings can be overridden on the ClusterClass.'
+              type: object
           required:
             - clientConfig
           type: object
