--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinehealthchecks.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinehealthchecks.cluster.x-k8s.io.yaml
@@ -2,7 +2,7 @@
   path: /spec/versions/1/schema
   value:
     openAPIV3Schema:
-      description: MachineHealthCheck is the Schema for the machinehealthchecks API.
+      description: "MachineHealthCheck is the Schema for the machinehealthchecks API. \n Deprecated: This type will be removed in one of the next releases."
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
