--- a/helm/cluster-api/files/core/patches/versions/v1beta1/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/clusterresourcesets.addons.cluster.x-k8s.io.yaml
@@ -69,6 +69,7 @@
               description: Strategy is the strategy to be used during applying resources. Defaults to ApplyOnce. This field is immutable.
               enum:
                 - ApplyOnce
+                - Reconcile
               type: string
           required:
             - clusterSelector
