--- a/helm/cluster-api/files/core/patches/versions/v1beta1/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/clusters.cluster.x-k8s.io.yaml
@@ -190,7 +190,7 @@
                           type: string
                       type: object
                     metadata:
-                      description: "Metadata is the metadata applied to the machines of the ControlPlane. At runtime this metadata is merged with the corresponding metadata from the ClusterClass. \n This field is supported if and only if the control plane provider template referenced in the ClusterClass is Machine based."
+                      description: Metadata is the metadata applied to the ControlPlane and the Machines of the ControlPlane if the ControlPlaneTemplate referenced by the ClusterClass is machine based. If not, it is applied only to the ControlPlane. At runtime this metadata is merged with the corresponding metadata from the ClusterClass.
                       properties:
                         annotations:
                           additionalProperties:
@@ -218,14 +218,17 @@
                       type: integer
                   type: object
                 rolloutAfter:
-                  description: RolloutAfter performs a rollout of the entire cluster one component at a time, control plane first and then machine deployments.
+                  description: 'RolloutAfter performs a rollout of the entire cluster one component at a time, control plane first and then machine deployments. Deprecated: This field has no function and is going to be removed in the next apiVersion.'
                   format: date-time
                   type: string
                 variables:
                   description: Variables can be used to customize the Cluster through patches. They must comply to the corresponding VariableClasses defined in the ClusterClass.
                   items:
-                    description: ClusterVariable can be used to customize the Cluster through patches. It must comply to the corresponding ClusterClassVariable defined in the ClusterClass.
+                    description: ClusterVariable can be used to customize the Cluster through patches. Each ClusterVariable is associated with a Variable definition in the ClusterClass `status` variables.
                     properties:
+                      definitionFrom:
+                        description: 'DefinitionFrom specifies where the definition of this Variable is from. DefinitionFrom is `inline` when the definition is from the ClusterClass `.spec.variables` or the name of a patch defined in the ClusterClass `.spec.patches` where the patch is external and provides external variables. This field is mandatory if the variable has `DefinitionsConflict: true` in ClusterClass `status.variables[]`'
+                        type: string
                       name:
                         description: Name of the variable.
                         type: string
@@ -320,7 +323,7 @@
                                 type: string
                             type: object
                           metadata:
-                            description: Metadata is the metadata applied to the machines of the MachineDeployment. At runtime this metadata is merged with the corresponding metadata from the ClusterClass.
+                            description: Metadata is the metadata applied to the MachineDeployment and the machines of the MachineDeployment. At runtime this metadata is merged with the corresponding metadata from the ClusterClass.
                             properties:
                               annotations:
                                 additionalProperties:
@@ -350,7 +353,7 @@
                             description: NodeVolumeDetachTimeout is the total amount of time that the controller will spend on waiting for all volumes to be detached. The default value is 0, meaning that the volumes can be detached without any time limitations.
                             type: string
                           replicas:
-                            description: Replicas is the number of worker nodes belonging to this set. If the value is nil, the MachineDeployment is created without the number of Replicas (defaulting to zero) and it's assumed that an external entity (like cluster autoscaler) is responsible for the management of this value.
+                            description: Replicas is the number of worker nodes belonging to this set. If the value is nil, the MachineDeployment is created without the number of Replicas (defaulting to 1) and it's assumed that an external entity (like cluster autoscaler) is responsible for the management of this value.
                             format: int32
                             type: integer
                           strategy:
@@ -392,8 +395,11 @@
                               overrides:
                                 description: Overrides can be used to override Cluster level variables.
                                 items:
-                                  description: ClusterVariable can be used to customize the Cluster through patches. It must comply to the corresponding ClusterClassVariable defined in the ClusterClass.
+                                  description: ClusterVariable can be used to customize the Cluster through patches. Each ClusterVariable is associated with a Variable definition in the ClusterClass `status` variables.
                                   properties:
+                                    definitionFrom:
+                                      description: 'DefinitionFrom specifies where the definition of this Variable is from. DefinitionFrom is `inline` when the definition is from the ClusterClass `.spec.variables` or the name of a patch defined in the ClusterClass `.spec.patches` where the patch is external and provides external variables. This field is mandatory if the variable has `DefinitionsConflict: true` in ClusterClass `status.variables[]`'
+                                      type: string
                                     name:
                                       description: Name of the variable.
                                       type: string
