--- a/helm/cluster-api/values.yaml
+++ b/helm/cluster-api/values.yaml
@@ -1,7 +1,7 @@
 name: cluster-api
 
 images:
-  domain: quay.io
+  domain: docker.io
   core:
     name: giantswarm/cluster-api-controller
   bootstrap:
