--- a/helm/cluster-api/values.yaml
+++ b/helm/cluster-api/values.yaml
@@ -19,3 +19,6 @@ watchFilter: capi
 # We install CRDs through a Job with the helm specific crd folder.
 crds:
   install: true
+
+ciliumNetworkPolicy:
+  enabled: false
