Revert "ALWAYS install ciliumnetworkpolicies"
This reverts commit 668895244b1d4e52668404d3202c842345ffedc7.

It will be needed for kind where we don't run cilium

--- a/helm/cluster-api/templates/hook-delete-aggregated-roles/ciliumnetworkpolicy.yaml
+++ b/helm/cluster-api/templates/hook-delete-aggregated-roles/ciliumnetworkpolicy.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ciliumNetworkPolicy.enabled }}
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
@@ -27,3 +28,4 @@ spec:
   egress:
     - toEntities:
         - kube-apiserver
+{{- end }}
