--- a/helm/cluster-api/templates/ciliumnetworkpolicy_capi-controller-manager.yaml
+++ b/helm/cluster-api/templates/ciliumnetworkpolicy_capi-controller-manager.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ciliumNetworkPolicy.enabled }}
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
@@ -22,3 +23,4 @@ spec:
   egress:
     - toEntities:
         - kube-apiserver
+{{- end }}
