--- a/helm/cluster-api/templates/crd-install/crd-ciliumnetworkpolicy.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-ciliumnetworkpolicy.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.crds.install }}
+{{- if .Values.ciliumNetworkPolicy.enabled }}
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
@@ -20,4 +21,5 @@ spec:
   egress:
     - toEntities:
         - kube-apiserver
+{{- end }}
 {{- end }}
