--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: '{{ .Release.Namespace }}'
 
 resources:
   - input/cluster-api-components.yaml
+  - ciliumnetworkpolicy_capi-controller-manager.yaml
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
