--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -3,6 +3,7 @@ namespace: '{{ .Release.Namespace }}'
 resources:
   - input/cluster-api-components.yaml
   - ciliumnetworkpolicy_capi-controller-manager.yaml
+  - ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
