--- a/config/helm/ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/config/helm/ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -2,6 +2,7 @@ apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
   labels:
+    app.kubernetes.io/component: bootstrap-kubeadm
     cluster.x-k8s.io/provider: bootstrap-kubeadm
     control-plane: controller-manager
     helm.sh/chart: cluster-api
