--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - input/cluster-api-components.yaml
   - ciliumnetworkpolicy_capi-controller-manager.yaml
   - ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
+  - ciliumnetworkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
