Add generation for networkpolicies

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
   - ciliumnetworkpolicy_capi-controller-manager.yaml
   - ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
   - ciliumnetworkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
+  - networkpolicy_capi-controller-manager.yaml
+  - networkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
