Switch to using Giant Swarm fork for built images

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -15,13 +15,24 @@ resources:
 
 # we want to define our own images
 images:
-  - name: registry.k8s.io/cluster-api/cluster-api-controller
+  - name: quay.io/giantswarm/cluster-api-controller-amd64
     newName: "{{.Values.images.domain}}/{{.Values.images.core.name}}"
     newTag: "{{.Values.images.core.tag | default .Values.images.tag}}"
-  - name: registry.k8s.io/cluster-api/kubeadm-bootstrap-controller
+  - name: quay.io/giantswarm/cluster-api-controller-arm64
+    newName: "{{.Values.images.domain}}/{{.Values.images.core.name}}"
+    newTag: "{{.Values.images.core.tag | default .Values.images.tag}}"
+
+  - name: quay.io/giantswarm/kubeadm-bootstrap-controller-amd6464
     newName: "{{.Values.images.domain}}/{{.Values.images.bootstrap.name}}"
     newTag: "{{.Values.images.bootstrap.tag | default .Values.images.tag}}"
-  - name: registry.k8s.io/cluster-api/kubeadm-control-plane-controller
+  - name: quay.io/giantswarm/kubeadm-bootstrap-controller-arm64
+    newName: "{{.Values.images.domain}}/{{.Values.images.bootstrap.name}}"
+    newTag: "{{.Values.images.bootstrap.tag | default .Values.images.tag}}"
+
+  - name: quay.io/giantswarm/kubeadm-control-plane-controller-amd64
+    newName: "{{.Values.images.domain}}/{{.Values.images.controlplane.name}}"
+    newTag: "{{.Values.images.controlplane.tag | default .Values.images.tag}}"
+  - name: quay.io/giantswarm/kubeadm-control-plane-controller-arm64
     newName: "{{.Values.images.domain}}/{{.Values.images.controlplane.name}}"
     newTag: "{{.Values.images.controlplane.tag | default .Values.images.tag}}"
 
@@ -105,12 +116,6 @@ patches:
     patch: |-
       - op: remove
         path: /spec/template/spec/securityContext/seccompProfile
-  - target:
-      kind: CustomResourceDefinition
-      name: (ipaddressclaims\.ipam|extensionconfigs\.runtime|ipaddresses\.ipam).cluster.x-k8s.io
-    patch: |-
-      - op: remove
-        path: /metadata/creationTimestamp
 
   # Upstream defaults to `Always` but since we use images that are not changing (`vX.Y.Z` or commit SHA), we prefer `IfNotPresent`
   - target:
