--- a/config/helm/service-add-metrics-port-kubeadm-control-plane.yaml
+++ b/config/helm/service-add-metrics-port-kubeadm-control-plane.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: capi-system
-  name: capi-webhook-service
+  namespace: capi-kubeadm-control-plane-system
+  name: capi-kubeadm-control-plane-webhook-service
 spec:
   ports:
     - name: metrics
