Revert switch to fork, keep only fixes for new kustomize

--- a/helm/cluster-api/files/core/patches/versions/v1alpha1/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha1/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
@@ -75,5 +75,7 @@
                   - type
                 type: object
               type: array
+          required:
+            - addressRef
           type: object
       type: object
