--- a/helm/cluster-api/files/core/patches/versions/v1alpha1/ipaddresses.ipam.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha1/ipaddresses.ipam.cluster.x-k8s.io.yaml
@@ -51,6 +51,7 @@
           required:
             - address
             - claimRef
+            - gateway
             - poolRef
             - prefix
           type: object
