--- a/config/helm/ciliumnetworkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
+++ b/config/helm/ciliumnetworkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
@@ -11,6 +11,10 @@ spec:
     matchLabels:
       cluster.x-k8s.io/provider: control-plane-kubeadm
       control-plane: controller-manager
+  ingress:  # for webhooks
+    - fromEntities:
+      - cluster  # even though it's a kube-apiserver pod running in host network it doesn't work without "cluster"
+      - kube-apiserver
   egress:
     - toEntities:
         - kube-apiserver
