--- a/helm/cluster-api/templates/cilium.io_v2_ciliumnetworkpolicy_capi-controller-manager.yaml
+++ b/helm/cluster-api/templates/cilium.io_v2_ciliumnetworkpolicy_capi-controller-manager.yaml
@@ -23,4 +23,8 @@ spec:
     matchLabels:
       cluster.x-k8s.io/provider: cluster-api
       control-plane: controller-manager
+  ingress:
+  - fromEntities:
+    - cluster
+    - kube-apiserver
 {{- end }}
