--- a/helm/cluster-api/templates/hook-delete-aggregated-roles/ciliumnetworkpolicy.yaml
+++ b/helm/cluster-api/templates/hook-delete-aggregated-roles/ciliumnetworkpolicy.yaml
@@ -19,12 +19,8 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-      app.giantswarm.io/commit: '{{ .Values.project.commit }}'
-      app.kubernetes.io/instance: '{{ .Release.Name }}'
-      app.kubernetes.io/managed-by: '{{ .Release.Service }}'
       app.kubernetes.io/name: cluster-api
-      app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+      job: helm-hook-delete-aggregated-roles 
   egress:
     - toEntities:
         - kube-apiserver
