--- a/helm/cluster-api/templates/hook-delete-aggregated-roles/job.yaml
+++ b/helm/cluster-api/templates/hook-delete-aggregated-roles/job.yaml
@@ -17,6 +17,17 @@ metadata:
   namespace: '{{ .Release.Namespace }}'
 spec:
   template:
+    metadata:
+      labels:
+        app.giantswarm.io/branch: '{{ .Values.project.branch }}'
+        app.giantswarm.io/commit: '{{ .Values.project.commit }}'
+        app.kubernetes.io/instance: '{{ .Release.Name }}'
+        app.kubernetes.io/managed-by: '{{ .Release.Service }}'
+        app.kubernetes.io/name: cluster-api
+        app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+        app.kubernetes.io/name: cluster-api
+        helm.sh/chart: cluster-api
+        job: helm-hook-delete-aggregated-roles 
     spec:
       automountServiceAccountToken: true
       containers:
