Backport cilium network policies to v1.7.x (#134)
Signed-off-by: Jirka Kremser <jiri.kremser@gmail.com>
Co-authored-by: Jirka Kremser <535866+jkremser@users.noreply.github.com>

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -2,6 +2,12 @@ namespace: '{{ .Release.Namespace }}'
 
 resources:
   - input/cluster-api-components.yaml
+  - ciliumnetworkpolicy_capi-controller-manager.yaml
+  - ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
+  - ciliumnetworkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
+  - networkpolicy_capi-controller-manager.yaml
+  - networkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
+  - networkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
