--- a/helm/cluster-api/files/bootstrap/bases/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/bootstrap/bases/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
@@ -43,7 +43,8 @@ spec:
     singular: kubeadmconfigtemplate
   scope: Namespaced
   versions:
-    - name: v1alpha3
+    - deprecated: true
+      name: v1alpha3
       schema: {}
       served: true
       storage: false
@@ -52,6 +53,7 @@ spec:
           jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
