--- a/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
@@ -74,6 +74,7 @@ spec:
           jsonPath: .status.unavailableReplicas
           name: Unavailable
           type: integer
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -117,6 +118,7 @@ spec:
           jsonPath: .status.unavailableReplicas
           name: Unavailable
           type: integer
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
