--- a/helm/cluster-api/files/core/bases/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machinedeployments.cluster.x-k8s.io.yaml
@@ -63,6 +63,7 @@ spec:
           jsonPath: .status.unavailableReplicas
           name: Unavailable
           type: integer
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -102,6 +103,7 @@ spec:
           jsonPath: .status.unavailableReplicas
           name: Unavailable
           type: integer
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
