--- a/helm/cluster-api/files/core/bases/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machines.cluster.x-k8s.io.yaml
@@ -60,6 +60,7 @@ spec:
           name: NodeName
           priority: 1
           type: string
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -92,6 +93,7 @@ spec:
           name: NodeName
           priority: 1
           type: string
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
