--- a/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
@@ -48,6 +48,7 @@ spec:
           jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
