--- a/helm/cluster-api/files/core/bases/clusterclasses.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/clusterclasses.cluster.x-k8s.io.yaml
@@ -47,6 +47,7 @@ spec:
           jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
