--- a/helm/cluster-api/files/core/bases/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/clusterresourcesets.addons.cluster.x-k8s.io.yaml
@@ -40,7 +40,8 @@ spec:
     singular: clusterresourceset
   scope: Namespaced
   versions:
-    - name: v1alpha3
+    - deprecated: true
+      name: v1alpha3
       schema: {}
       served: true
       storage: false
@@ -51,6 +52,7 @@ spec:
           jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
