--- a/helm/cluster-api/files/core/bases/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/clusters.cluster.x-k8s.io.yaml
@@ -47,6 +47,7 @@ spec:
           jsonPath: .status.phase
           name: Phase
           type: string
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -62,6 +63,7 @@ spec:
           jsonPath: .status.phase
           name: Phase
           type: string
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
