--- a/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-kubeadm-control-plane-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.11.3
+    controller-gen.kubebuilder.io/version: v0.11.4
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -74,6 +74,7 @@ spec:
           jsonPath: .status.unavailableReplicas
           name: Unavailable
           type: integer
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -117,6 +118,7 @@ spec:
           jsonPath: .status.unavailableReplicas
           name: Unavailable
           type: integer
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
