--- a/helm/cluster-api/files/core/bases/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/clusters.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.11.3
+    controller-gen.kubebuilder.io/version: v0.11.4
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -47,6 +47,7 @@ spec:
           jsonPath: .status.phase
           name: Phase
           type: string
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -62,6 +63,7 @@ spec:
           jsonPath: .status.phase
           name: Phase
           type: string
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
