--- a/helm/cluster-api/files/core/bases/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machines.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.11.3
+    controller-gen.kubebuilder.io/version: v0.11.4
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -60,6 +60,7 @@ spec:
           name: NodeName
           priority: 1
           type: string
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -92,6 +93,7 @@ spec:
           name: NodeName
           priority: 1
           type: string
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
