--- a/helm/cluster-api/files/core/bases/machinesets.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machinesets.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.11.3
+    controller-gen.kubebuilder.io/version: v0.11.4
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -55,6 +55,7 @@ spec:
           jsonPath: .status.readyReplicas
           name: Ready
           type: integer
+      deprecated: true
       name: v1alpha3
       schema: {}
       served: true
@@ -86,6 +87,7 @@ spec:
           jsonPath: .status.readyReplicas
           name: Ready
           type: integer
+      deprecated: true
       name: v1alpha4
       schema: {}
       served: true
